test/asm/duplicate-section-after-literal.asm
SECTION "with fragment literals", ROM0

ld hl, [[ db "Hi", 0 ]]

SECTION "dup", WRAM0

SECTION "dup", WRAM0
